@@ -1,10 +1,7 @@
 AUX fixwarnings.patch 862 SHA256 ff2bbe986fdf345e40d26ecc28e8246de40bbc0299a1e81873e15dca46499104 SHA512 34c9efbd32cdf88415f1c6d687636ae7ba62b3dc5b63096e57a2b19c33756157f2039e5ba7e5985a8ec6626f9b2a8e242808c968e5796bae8ffd77375e75c860 WHIRLPOOL b0590cd5d62c2a5b013579497c227915f492da5b3e766cb021d0b20f3dfd83ddb9796f718792322fe19d6b6e06c964049944cb4fc906e705b11c17d11d7c4a2d
 AUX ladish-1-include.patch 633 SHA256 8d0ebc16fd8bcdeac11d0ecb8c9c3f77822b199e9e27eb883a926952e1aebb0b SHA512 4ef6d5c19d2d570d518a4491ead5e074838d33604c13402ff0608a36bb1e4476e3294f31a644bb8700c62d2c4d73bd0fe15fff2a93e4c2b53e1ed771710d6a98 WHIRLPOOL 4642d387b91e57eadbbf3a728b6ee7e47d66ddab5d3035fe20392ef563c99d08fb5a094dd4456f6933433c0335250c5b774cac1879ccaa5df46a134d1a0bb5f0
 DIST ladish-1.tar.bz2 599209 SHA256 71065961f949f472cba50b6181b184d196d59332f6e9106403a37955906776d4 SHA512 10b321021d35655c94ef8558b32a24a650f298d97a05d5cb8119c3ee6a53059ba4a089af6c4bcc0fa5e4d6e112ced771b385e1eccc429a0b348437706c2f1c2b WHIRLPOOL ae2a4ffd8c39506b119a21e164a8cd1065a870abe4aca0019fb0387d705262dc49698950f10657c3497f62e99b52c0a277d57f188c845d8bf0c4954520844f34
-EBUILD ladish-1-r1.ebuild 1252 SHA256 879ecbb10c8ac0c428cad6bf768658b49ce417e32a8e441f56f972cdca5c7247 SHA512 c573cab31c17469da547a3f5b7ca445d8e2d33dcc3748dd0ef4ee7ac494033ea09fe882188d5f7808dbabb585595ba16776e3c965a18b88bd9f9f0de3a3a79b5 WHIRLPOOL d6ecb4753410b8b721bff77cf619ec8a3c8162e3ad6367fb21b0a48865e7f88b2e8b0c45ee24c0a4dde9626e05c697c56bb45babcebdbb99befab15db3b93cc8
 EBUILD ladish-1-r2.ebuild 1270 SHA256 ce35f7f7b86fa5674c134cdc07a25a10f0cf160fa72ee719f5bc257f92f0b77c SHA512 8ac7de03f18ebed9754b85c71116f29fce93de8baac9489d14a8bca22e1fe26cc76653a09d9de4091b4892a8af5dfcc91a793153b77052805cb3911e68cd796f WHIRLPOOL eb64aa606838b24dbcdc864f81fafa83982605c97b0a98386ca7380046481fde39478477a7939bb1ce83eab6c87540fe1fd9aaa5d6d599a3590c06603929055c
-EBUILD ladish-1.ebuild 1436 SHA256 0f86e7aa693324256065d6b168f6ddf88b4aefe73a1e7086a16815286dff8c1b SHA512 1a5ef16f66081847fa851e92538ac75e644e4712b4c9bcd7bf0d34bc450a3887ecac079c579ccb2ffaacbbdfa0c4ba337265bc34b283fa4682403f700ecf69a2 WHIRLPOOL c2d293f1665b520a059460972516a6f0dc8e7d6b66defb97395c36819f464ff7db13b6cbcc9af4184172d20d258e2fc17fefee527549982de8bf3c13b1212518
 EBUILD ladish-9999-r1.ebuild 1204 SHA256 d7156ecf627c5e3dc0b22a52c4cd8e10c9aebe24fe7c417fb9d60e749d89042e SHA512 37b3c8dcaed135ccc3ebbdbe5877e6d2cb0ccd4d508002c6fdeb8179a6533795baf334e3cc92663a2802a25f53ce95d77f559953c53ccee6d1010e8c5cd4c732 WHIRLPOOL edb3ed508581a51371acca7c6f6515a302d871908586609a7fa7394c0890ecbf25c0a350bb97176c2ad21655af2466e595e0206f138c8096df9b0eaaa93ec1de
-EBUILD ladish-9999.ebuild 1319 SHA256 3ecb31799269797f1ad6d96c0fc830277fbf62d75d5245e9d82728c57e7c43e9 SHA512 500529f02aea0ac9eb898808001e96955c9393c06dd1749d3a69915b7523a66633f78f518253094ce54036fd5dfbf676e3d49c8ccdb7665a451a5da07170b5d7 WHIRLPOOL 51d8b986042fcd89eea80a933b6fe055bd1bef1a882e70c58d56184d011d5e94514da047fa6f0f5b5656f6479a15e81c9e5bda8a58e44c0bf70d254e0c80bc30
-MISC ChangeLog 1600 SHA256 cb3d2b6a893e97e832bfbe2bb714423a3fd4552be468728e3e79e2de9c6fc779 SHA512 f704e0acf8e2d70092b3b6571ede9fc7d5b31f9a49962da78827f5732fabf04f9e99ceaa040efd7cbb9523cfdc28212f38f3b9c5208ea53cdec0b9f9b9089e4a WHIRLPOOL 234bf686dce8d84b0a3f60c1cbdb90d8c9ee21c9f80941bab1d0b906f8262bd4f3c53612ab0b62c9dc2c0e8823821befe1bf1a4dc96a2d5d2f3780ff13d938cd
+MISC ChangeLog 1751 SHA256 9da171e59e94626b14957c144e4ea1f7e20150d30d3f7046f5e44d3a6c15be0c SHA512 6b8433e92a20ce443b12354a8e06214ee10fbdda7446dfcadd8c8002dc5c7d7611c31c29be59effd17c5509299d517c4bda017e7f805a4d57bb0e0b44a67a462 WHIRLPOOL b37e4c2be330ab60d9ec10bbd33582eb93b4d88964c29ddf4beca1f37c847742be65b13b3ed829c909cb6a2ee2fe1b77e6f7878b67646c726ea1951f5f2b5ce6
 MISC metadata.xml 548 SHA256 c4aeda7c00505448bfa4aee5c7108e0a5d7cc40b92850e2c3c92222869af0f39 SHA512 8bf27c0e0959195356691b0a5e16168b2bc8bf777e00201e4c85c7ca66c08aa52811c436f5204465716679183bafadf5b803195fb017835d8de4da28d86e1667 WHIRLPOOL 7cd4db8d4fdaab26c22b08cd0c27fed554aee28ca9626e486cf8e53d6be43f8b5027b00fc90d19c85fe885f17877e5458c591631d823ff347044ff2d03feaaef
