@@ -2,6 +2,10 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  29 Nov 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
+  -ladish-1.ebuild, -ladish-1-r1.ebuild, -ladish-9999.ebuild:
+  Removed old ebuilds.
+
 *ladish-1-r2 (26 Jul 2013)
 
   26 Jul 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
